# src/main/java/com/hei/prog3td2/controller/response/TeamResponse.java
@@ -1,5 +1,6 @@
 package com.hei.prog3td2.controller.response;
 
+import com.hei.prog3td2.model.Sponsor;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
@@ -16,6 +17,6 @@ import java.util.List;
 public class TeamResponse {
     private String id;
     private String name;
-    private List<String> players;
-    private List<String> sponsors;
+    private List<PlayerResponse> players;
+    private List<Sponsor> sponsors;
 }
